--- a/public/development/wordGame.html
+++ b/public/development/wordGame.html
@@ -1,27 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Multiplayer Typing Game</title>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./scripts/game.js" defer></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 20px;
+        }
+        #inputField {
+            font-size: 20px;
+            width: 300px;
+            padding: 10px;
+        }
+        #word, #time-display, #words-display, #wpm-display {
+            font-size: 24px;
+            margin: 10px 0;
+        }
+        #startButton {
+            font-size: 20px;
+            padding: 10px 20px;
+        }
+        #game-info {
+            margin: 20px 0;
+        }
+    </style>
 </head>
 <body>
-    <h1 id="time-display">Time</h1>
-    <h1 id="word">Word</h1>
+    <h1>Multiplayer Typing Game</h1>
 
-    <input type="text" id="inputField" oninput="onInputEnter()">
-
-    <button onclick="start()">Start</button>
-
-    <h1 id="start-time-delay">Start Time</h1>
-
-
-    <div>
-        <h2>Words: <p id="words-display">0</p></h2>
-        <h2>WPM: <p id="wpm-display">0</p></h2>
+    <div id="game-info">
+        <div id="player-id">Your ID: </div>
+        <div id="word">Start typing the word here...</div>
+        <div id="time-display">00:00</div>
+        <div id="words-display">0 Words</div>
+        <div id="wpm-display">0.00 WPM</div>
     </div>
 
-    <script src="./scripts/words.js"></script>
-    <script src="./scripts/game.js"></script>
+    <input type="text" id="inputField" placeholder="Type here..." />
+
+    <button id="startButton">Start Game</button>
 </body>
 </html>
